kubernetes-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-boutique
  labels:
    app.kubernetes.io/name: online-boutique
    environment: production
