kubernetes-manifests/12-loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: online-boutique
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
        - name: main
          image: gcr.io/google-samples/microservices-demo/loadgenerator:v0.8.0
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
