kubernetes-manifests/02-adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/adservice:v0.8.0
          ports:
            - containerPort: 9555
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            grpc:
              port: 9555
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            grpc:
              port: 9555
          resources:
            requests:
              cpu: 200m
              memory: 180Mi
            limits:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: online-boutique
spec:
  selector:
    app: adservice
  ports:
    - name: grpc
      port: 9555
      targetPort: 9555
