kubernetes-manifests/03-cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/cartservice:v0.8.0
          ports:
            - containerPort: 7070
          readinessProbe:
            initialDelaySeconds: 15
            grpc:
              port: 7070
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10
            grpc:
              port: 7070
          resources:
            requests:
              cpu: 200m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: online-boutique
spec:
  selector:
    app: cartservice
  ports:
    - name: grpc
      port: 7070
      targetPort: 7070
