kubernetes-manifests/05-currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/currencyservice:v0.8.0
          ports:
            - containerPort: 7000
          readinessProbe:
            grpc:
              port: 7000
          livenessProbe:
            grpc:
              port: 7000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: online-boutique
spec:
  selector:
    app: currencyservice
  ports:
    - name: grpc
      port: 7000
      targetPort: 7000
