kubernetes-manifests/06-emailservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/emailservice:v0.8.0
          ports:
            - containerPort: 8080
          readinessProbe:
            periodSeconds: 5
            grpc:
              port: 8080
          livenessProbe:
            periodSeconds: 5
            grpc:
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: online-boutique
spec:
  selector:
    app: emailservice
  ports:
    - name: grpc
      port: 5000
      targetPort: 8080
