kubernetes-manifests/08-paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/paymentservice:v0.8.0
          ports:
            - containerPort: 50051
          readinessProbe:
            grpc:
              port: 50051
          livenessProbe:
            grpc:
              port: 50051
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: online-boutique
spec:
  selector:
    app: paymentservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
