kubernetes-manifests/09-productcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.8.0
          ports:
            - containerPort: 3550
          readinessProbe:
            grpc:
              port: 3550
          livenessProbe:
            grpc:
              port: 3550
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: online-boutique
spec:
  selector:
    app: productcatalogservice
  ports:
    - name: grpc
      port: 3550
      targetPort: 3550
