kubernetes-manifests/10-recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.8.0
          ports:
            - containerPort: 8080
          readinessProbe:
            periodSeconds: 5
            grpc:
              port: 8080
          livenessProbe:
            periodSeconds: 5
            grpc:
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 220Mi
            limits:
              cpu: 200m
              memory: 450Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: online-boutique
spec:
  selector:
    app: recommendationservice
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
