kubernetes-manifests/11-shippingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/shippingservice:v0.8.0
          ports:
            - containerPort: 50051
          readinessProbe:
            periodSeconds: 5
            grpc:
              port: 50051
          livenessProbe:
            grpc:
              port: 50051
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: online-boutique
spec:
  selector:
    app: shippingservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
